test-cases/negative/test_059_method_call_on_primitive.lay
# negative test: method call on primitive type
# expected: type checker should catch this

the variable x of type Number is 5
call x dot toString


